trunk/Archive2/1f/aaa302be0dc778/output
main.cpp: In member function 'virtual void Child<Func>::load(const Handle&, const char*)':
main.cpp:22:80: error: ISO C++ forbids declaration of 'type name' with no type [-fpermissive]
   loader(handle, *reinterpret_cast<const /* type of Func's second argument */  *>(data));
                                                                                ^
